# rag-service

./: .gitignore  API.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
compose/: .env.example  docker-compose.yml
scripts/: ragctl.py
src/rag_service/api/: deps.py  main.py
src/rag_service/api/routes/: admin.py  auth.py  documents.py  graph.py  health.py  ingest.py  ingestion_progress.py  public_docs.py  retrieve.py  whoami.py
src/rag_service/config/: settings.py
src/rag_service/db/: models.py  session.py
src/rag_service/ingestion/: dynamic_chunker.py  entity_extractor.py  graph_loader.py
src/rag_service/llm/: client.py  openai_compat.py
src/rag_service/queue/: worker.py
src/rag_service/retrieval/: embeddings.py  graph_search.py  rerank.py  vector_search.py
